--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
     "react-scripts": "2.1.3",
-    "redux": "4.0.1"
+    "redux": "4.0.1",
+    "redux-promise-middleware": "6.1.0",
+    "redux-promise-middleware-actions": "2.1.0"
   },
   "scripts": {
     "start": "npm-run-all --parallel client server",
