--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     "server": "json-server --watch server/data.json --static server/static --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:integration": "jest -c integration/jest.config.js",
+    "eject": "react-scripts eject",
+    "serve": "yarn build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "devDependencies": {
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "jest-enzyme": "^7.0.1",
+    "jest-puppeteer": "^4.2.0",
     "json-server": "^0.14.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "puppeteer": "^1.17.0",
+    "serve": "^11.0.1"
   },
   "proxy": "http://localhost:3001"
 }
