--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^16.7.0",
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
-    "react-scripts": "2.1.3",
     "redux": "4.0.1",
     "redux-promise-middleware": "6.1.0",
     "redux-promise-middleware-actions": "2.1.0"
@@ -29,16 +28,33 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest-enzyme": "^7.0.1",
     "jest-puppeteer": "^4.2.0",
     "json-server": "^0.14.2",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^1.17.0",
-    "serve": "^11.0.1"
+    "serve": "^11.0.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-devserver": "0.0.6",
+    "whatwg-fetch": "^3.0.0"
   },
   "proxy": "http://localhost:3001"
 }
