--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "7.4.4",
     "@material-ui/core": "4.0.0-beta.2",
     "@material-ui/icons": "4.0.0-beta.0",
     "classnames": "2.2.6",
@@ -28,22 +29,18 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest-enzyme": "^7.0.1",
     "jest-puppeteer": "^4.2.0",
@@ -51,9 +48,10 @@
     "npm-run-all": "^4.1.5",
     "puppeteer": "^1.17.0",
     "serve": "^11.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-devserver": "0.0.6",
+    "webpack-dev-server": "^3.5.0",
     "whatwg-fetch": "^3.0.0"
   },
   "proxy": "http://localhost:3001"
